--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.shadow-angle {
+    box-shadow: 0px 0px 15px 0 rgba(0, 0, 0, 0.2);
+}
